--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -102,6 +102,19 @@
     padding: 15px 30px;
   }
   
+.navigation-links {
+    display: flex;
+    margin-top: 40px;
+    justify-content: center;
+  }
+
+  .navigation-links a {
+    margin: 20px;
+    border-radius: 4px;
+    padding: 20px 15px;
+    text-decoration: none;
+    text-transform: capitalize;
+  }
   .project-desciption {
     padding: 120px 60px;
   }
