--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -8,6 +8,34 @@
   body {
     font-family: var(--default-font-family);
   }
+
+  nav {
+    padding: 20px 0;
+  }
+
+  nav li {
+    display: inline; /*в рядок*/
+    list-style: none; /*забирає маркери списку*/
+    line-height: 42px;
+    margin-left: 15px;
+  }
+
+  nav ul {
+    padding: 0;
+    margin: 0;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: #272142;
+    transition: all 100ms ease-in-out;
+  }
+
+  nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
+
   
   h1,
   h2,
@@ -119,6 +147,10 @@
     padding: 120px 60px;
   }
   
+  .logo {
+    max-height: 40px;
+  }
+
   @media (max-width: 900px) {
     h1 {
       font-size: 44px;
