--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,4 +1,4 @@
-:root {
+:root /*оголошення нових змінних, використовується в коді з var(--...) називається рандомно*/ {
     --branding-color: #6c63ff;
     --secondary-color: #f9f7fe;
     --heading-font-family: "Playfair Display", serif;
@@ -6,18 +6,19 @@
   }
   
   body {
-    font-family: var(--default-font-family);
+    font-family /*пріоритетний список шрифтів*/: var(--default-font-family);
   }
 
   nav {
-    padding: 20px 0;
+    padding /*внутрішні відступи елемента*/: 20px 0;      /*зверху і знизу 10px */
+    /*зліва і справа 20px */
   }
 
   nav li {
-    display: inline; /*в рядок*/
-    list-style: none; /*забирає маркери списку*/
-    line-height: 42px;
-    margin-left: 15px;
+    display /*спосіб відображення*/: inline; /*в рядок*/
+    list-style /*маркети списку*/: none; /*забирає маркери списку*/
+    line-height /*міжрядкова висота*/: 42px;
+    margin-left /*зовнішній відступ від елемента*/: 15px;
   }
 
   nav ul {
@@ -28,7 +29,7 @@
   nav a {
     text-decoration: none;
     color: #272142;
-    transition: all 100ms ease-in-out;
+    transition: all 100ms ease-in-out; /*анімація при наведенні*/
   }
 
   nav a:hover,
@@ -45,12 +46,12 @@ nav li.active a {
   h6 {
     color: black;
     font-family: var(--heading-font-family);
-    font-weight: bold;
+    font-weight /*відображення тексту*/: bold;
   }
   
   h1 {
     font-size: 96px;
-    line-height: 1.5;
+    line-height /*міжрядковий відступ*/: 1.5;
   }
   
   h2 {
@@ -64,15 +65,15 @@ nav li.active a {
   }
   
   .hero {
-    background: var(--secondary-color);
-    text-align: center;
-    padding: 160px 20px;
+    background /*фон*/: var(--secondary-color);
+    text-align /*вирівнювання в блоці родинного елемента*/: center;
+    padding /*внутрішні відступи*/: 160px /*верх,низ*/ 20px /*ліво, право*/;
   }
   
   .hero p {
     font-size: 36px;
-    font-weight: bold;
-    margin: 0;
+    font-weight /*товщина тексту*/: bold;
+    margin /*зовнішній відступ*/: 0;
     color: #272142;
   }
   
@@ -84,12 +85,12 @@ nav li.active a {
   }
   
   .content-container {
-    padding: 160px 20px;
+    padding /*внутрішні відступи*/: 160px /*по горизонталі або верх-низ*/ 20px /*по вертикалі, або право-ліво*/;
   }
   
   .content h1 {
     font-size: 64px;
-    line-height: 80px;
+    line-height/*міжрдкова висота*/: 80px;
   }
   
   .content h2 {
@@ -100,7 +101,6 @@ nav li.active a {
   .content h3 {
     font-size: 24px;
     line-height: 1.5;
-  
     font-family: var(--default-font-family);
   }
   
@@ -109,31 +109,31 @@ nav li.active a {
   }
   
   .content {
-    margin: 30px;
+    margin/*зовнішній відступ*/: 30px; /*з усіх сторін по 30 пікскелів*/
   }
   
   .btn-branding {
-    background: var(--branding-color);
-    border-radius: 4px;
+    background /*фон*/: var(--branding-color);
+    border-radius /*заокруглення кутів*/: 4px;
     color: white;
     font-size: 18px;
     line-height: 27px;
-    padding: 15px 30px;
+    padding/*внутрішній відступ*/: 15px/*верх, низ*/ 30px /*ліво, право*/;
   }
   
   .btn-branding-outline {
     color: var(--branding-color);
-    border: 1px solid var(--branding-color);
-    border-radius: 4px;
+    border /*стиль границь*/: 1px solid var(--branding-color);
+    border-radius /*заокруглення границь*/: 4px;
     font-size: 18px;
-    line-height: 27px;
-    padding: 15px 30px;
+    line-height /*міжрядковий відступ*/: 27px;
+    padding/* внутрішній відступ*/: 15px 30px;
   }
   
 .navigation-links {
-    display: flex;
-    margin-top: 40px;
-    justify-content: center;
+    display: flex /*розтягнення або стиснення елемента, щоб прийняти форму полів*/;
+    margin-top /*зовнішній відступ зверху*/: 40px;
+    justify-content/*вирівнювання елементів*/: center;
   }
 
   .navigation-links a {
@@ -141,14 +141,14 @@ nav li.active a {
     border-radius: 4px;
     padding: 20px 15px;
     text-decoration: none;
-    text-transform: capitalize;
+    text-transform /*регістр*/: capitalize /*перша буква велика*/;
   }
   .project-desciption {
     padding: 120px 60px;
   }
   
   .logo {
-    max-height: 40px;
+    max-height /*максимальний розмір*/: 40px;
   }
 
   footer {
@@ -182,7 +182,7 @@ nav li.active a {
     padding: 10px 14px;
     border-radius: 50%;
     font-size: 18px;
-    transition: all 100ms ease-in-out;
+    transition /*анімація*/: all 100ms ease-in-out;
   }
   
   footer .social-links a:hover {
@@ -190,7 +190,7 @@ nav li.active a {
     background: var(--branding-color);
   }
 
-  @media (max-width: 900px) {
+  @media /*почне працювати, коли максимальна величина екрану буде 900пікселів чи на телефоні*/ (max-width: 900px) {
     h1 {
       font-size: 44px;
       line-height: 56px;
